Fix form alignment on slicer app store index page

--- a/public/css/index/index.index.css
+++ b/public/css/index/index.index.css
@@ -77,7 +77,7 @@ div.extensionNameWrapper,div.subtitleWrapper {
   margin-left: 10px;
 }
 
-form {
+div.extensionRatings form {
   display: inline;
 }
 
